--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 .env.*.local
 dev.env
 
+# Next.js
+.next/
+out/
+.next
+build/
+dist/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -77,4 +84,11 @@ logs/
 # OS files
 .DS_Store
 Thumbs.db
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
