--- a/env.example
+++ b/env.example
@@ -10,17 +10,20 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # Voice Processing Configuration
 VOICE_MODEL=whisper-1
-TTS_MODEL=tts-1
+TTS_MODEL=tts-1-hd
+INFERENCE_MODEL=gpt-4o
 
-# Restaurant Configuration
-RESTAURANT_NAME=VoiceOrder Restaurant
-RESTAURANT_PHONE=+1-555-0123
-
-# API Configuration
+# ============================================================================
+# API CONFIGURATION
+# ============================================================================
 API_HOST=0.0.0.0
-API_PORT=4000
-DEBUG=True
+API_PORT=4002
+DEBUG=False
+RELOAD=True
 
+# ============================================================================
+# SECURITY CONFIGURATION
+# ============================================================================
 # Twilio Configuration (for phone integration)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
