Add Hugging Face TTS support and update configuration
- Introduced Hugging Face TTS integration using the Kokoro-82M model for local audio generation.
- Updated configuration files to include Hugging Face API keys and tokens.
- Enhanced the text-to-speech tool to manage audio playback and improve error handling.
- Modified the UI to support new audio playback methods and ensure seamless interaction.

This commit expands the voice agent's capabilities by integrating advanced TTS features, improving user experience and flexibility in audio generation.

--- a/env.example
+++ b/env.example
@@ -8,6 +8,10 @@ REDIS_URL=redis://localhost:6379
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Hugging Face Configuration
+HUGGINGFACE_API_KEY=your_huggingface_api_key_here
+HF_TOKEN=your_hf_token_here
+
 # Voice Processing Configuration
 VOICE_MODEL=whisper-1
 TTS_MODEL=tts-1-hd
