Implement Twilio Phone Integration
- Added TwilioPhoneTool for handling incoming calls, managing real-time audio processing, and integrating with existing voice agent tools.
- Introduced new API endpoints for Twilio webhooks: `/webhooks/twilio/incoming`, `/webhooks/twilio/status`, and `/webhooks/twilio/stream`.
- Enhanced audio format conversion utilities to support Twilio's μ-law PCM and OpenAI's WAV formats.
- Updated configuration files to include Twilio credentials and webhook settings.
- Added a Twilio Phone Dashboard UI for monitoring active calls and managing configurations.

This commit significantly expands the voice agent's capabilities by enabling AI-powered phone conversations through Twilio integration.

--- a/env.example
+++ b/env.example
@@ -26,12 +26,18 @@ DEBUG=False
 RELOAD=True
 
 # ============================================================================
-# SECURITY CONFIGURATION
+# TWILIO CONFIGURATION (for phone integration)
 # ============================================================================
-# Twilio Configuration (for phone integration)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_WEBHOOK_URL=https://your-domain.com/webhooks/twilio
+TWILIO_PHONE_NUMBER=+1234567890
+TWILIO_WEBHOOK_BASE_URL=https://your-domain.com
+# Note: For local development, use ngrok: ngrok http 4002
+# Then set TWILIO_WEBHOOK_BASE_URL=https://your-ngrok-url.ngrok.io
+
+# ============================================================================
+# SECURITY CONFIGURATION
+# ============================================================================
 
 # Security
 SECRET_KEY=your_secret_key_here
