--- a/env.example
+++ b/env.example
@@ -14,7 +14,7 @@ HF_TOKEN=your_hf_token_here
 
 # Voice Processing Configuration
 VOICE_MODEL=whisper-1
-TTS_MODEL=tts-1-hd
+TTS_MODEL=tts-1
 INFERENCE_MODEL=gpt-4o
 
 # ============================================================================
