Implement Twilio Streaming and Configuration Management
- Introduced a new Twilio streaming handler to manage real-time audio processing for incoming calls, enabling low-latency interactions.
- Added support for dynamic phone number configurations stored in MongoDB, allowing unique AI settings for different Twilio numbers.
- Enhanced the API to handle both batch and stream processing modes based on the new TWILIO_PROCESSING_MODE environment variable.
- Improved audio conversion utilities for better compatibility with Twilio's media stream requirements.
- Updated the environment configuration template and documentation to reflect new settings and usage instructions.

This commit significantly enhances the Twilio integration by enabling real-time audio processing and flexible configuration management, improving the overall user experience in voice interactions.

--- a/env.example
+++ b/env.example
@@ -35,6 +35,11 @@ TWILIO_WEBHOOK_BASE_URL=https://your-domain.com
 # Note: For local development, use ngrok: ngrok http 4002
 # Then set TWILIO_WEBHOOK_BASE_URL=https://your-ngrok-url.ngrok.io
 
+# Twilio Processing Mode ("batch" or "stream")
+# "batch": Reliable, higher-latency. Uses <Record>.
+# "stream": Low-latency, real-time. Uses Media Streams.
+TWILIO_PROCESSING_MODE=batch
+
 # ============================================================================
 # SECURITY CONFIGURATION
 # ============================================================================
