Implement MongoDB integration for conversation and analytics storage
- Initialized MongoDB connection for conversation storage, enhancing data persistence and retrieval capabilities.
- Added new MongoDB models and modules for managing conversations and analytics, including recent call queries.
- Updated API endpoints to support fetching recent calls and analytics data from MongoDB.
- Enhanced configuration settings to include MongoDB parameters, ensuring flexibility in database management.
- Removed obsolete database files and improved documentation for MongoDB setup and usage.

This commit significantly enhances the application's data management capabilities by integrating MongoDB for conversation and analytics storage, improving overall functionality and user experience.

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,8 @@ transformers>=4.35.0
 torch>=2.0.0
 soundfile>=0.12.1
 twilio>=8.0.0
+# MongoDB for conversation storage
+pymongo>=4.6.0
+motor>=3.3.0
 # Voice Agent specific dependencies
 webrtcvad-wheels
