--- a/env.example
+++ b/env.example
@@ -5,6 +5,10 @@
 DATABASE_URL=postgresql://username:password@localhost:5432/voiceagent
 REDIS_URL=redis://localhost:6379
 
+# MongoDB Configuration (for conversation storage)
+MONGODB_URL=mongodb+srv://gandrateja_db_user:7RWRoo2ktDV6SWDv@voiceagents.11zifn8.mongodb.net/
+MONGODB_DATABASE=voiceagent
+MONGODB_CONVERSATIONS_COLLECTION=conversations
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
