--- a/ui/package.json
+++ b/ui/package.json
@@ -9,10 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@tanstack/react-table": "^8.21.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.294.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "ws": "^8.18.3"
+    "react-router-dom": "^6.20.0",
+    "tailwind-merge": "^2.1.0",
+    "ws": "^8.18.3",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
