Remove secrets, clean up unwanted files, and add active agent toggle
- Remove hardcoded MongoDB credentials from config.py and env.example
- Remove unwanted test files and legacy HTML UIs
- Add active/inactive agent toggle in UI with backend validation
- Ensure only one agent per phone number can be active at a time
- Update README to reference env.example instead of dev.env
- Clean up .gitignore entries

--- a/env.example
+++ b/env.example
@@ -6,7 +6,7 @@ DATABASE_URL=postgresql://username:password@localhost:5432/voiceagent
 REDIS_URL=redis://localhost:6379
 
 # MongoDB Configuration (for conversation storage)
-MONGODB_URL=mongodb+srv://gandrateja_db_user:7RWRoo2ktDV6SWDv@voiceagents.11zifn8.mongodb.net/
+MONGODB_URL=mongodb+srv://username:password@cluster.mongodb.net/
 MONGODB_DATABASE=voiceagent
 MONGODB_CONVERSATIONS_COLLECTION=conversations
 # OpenAI Configuration
