Enhance Twilio integration with phone registration and credential management
- Introduced a new API endpoint for registering phone numbers with Twilio credentials, allowing secure storage in MongoDB.
- Updated Twilio call handling to retrieve credentials dynamically from registered phones, improving security and flexibility.
- Enhanced the UI to support phone registration and selection for agent creation, ensuring a seamless user experience.
- Implemented normalization for phone numbers to maintain consistency across the application.
- Improved error handling and logging for phone registration and credential retrieval processes.

These changes significantly enhance the Twilio integration by providing a robust mechanism for managing phone credentials and improving the overall user experience in the SaaS dashboard.

--- a/env.example
+++ b/env.example
@@ -32,9 +32,10 @@ RELOAD=True
 # ============================================================================
 # TWILIO CONFIGURATION (for phone integration)
 # ============================================================================
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=+1234567890
+# NOTE: Twilio credentials MUST be registered through the app UI.
+# DO NOT set TWILIO_ACCOUNT_SID, TWILIO_AUTH_TOKEN, or TWILIO_PHONE_NUMBER here.
+# All credentials are stored in MongoDB via the "Register Phone Number" feature.
+# The system will ONLY pull credentials from MongoDB, not from .env file.
 TWILIO_WEBHOOK_BASE_URL=https://your-domain.com
 # Note: For local development, use ngrok: ngrok http 4002
 # Then set TWILIO_WEBHOOK_BASE_URL=https://your-ngrok-url.ngrok.io
