feat: Implement user authentication with new signup/login UI, user store, and E2E tests, while removing various old scripts and documentation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,9 @@ twilio>=8.0.0
 # MongoDB for conversation storage
 pymongo>=4.6.0
 motor>=3.3.0
+# Authentication dependencies
+bcrypt>=4.0.0
+PyJWT>=2.8.0
+
 # Voice Agent specific dependencies
 webrtcvad-wheels
