feat: integrate ElevenLabs for STT and TTS via a new provider factory

--- a/env.example
+++ b/env.example
@@ -12,6 +12,9 @@ MONGODB_CONVERSATIONS_COLLECTION=conversations
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
+# ElevenLabs Configuration (for human-like TTS/STT)
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
 # Hugging Face Configuration
 HUGGINGFACE_API_KEY=your_huggingface_api_key_here
 HF_TOKEN=your_hf_token_here
