--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,7 @@
 # OpenAI API Configuration
 # Get your API key from https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Deepgram API Configuration (for STT/TTS)
+# Get your API key from https://console.deepgram.com/
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
